Fix Invisible

--- a/styles/settings/main.less
+++ b/styles/settings/main.less
@@ -188,3 +188,8 @@
     }
   }
 }
+
+.sub-section h3.sub-section-heading.has-items{
+  background-color: rgba(0,0,0,.4);
+  padding: 10px;
+}
